# MarketSentiment

./: README.md  app.py  pyproject.toml  requirements.txt
src/: logger.py
src/data_collection/: parser.py  scraper.py
src/data_scraping/: scraper.py
